--- a/src/styles/_headings.scss
+++ b/src/styles/_headings.scss
@@ -2,6 +2,7 @@
   font-weight: 600;
   font-size: 2.8rem;
   letter-spacing: 1px;
+  line-height: 4rem;
   @media (min-width: 1024px) {
     font-size: 4.8rem;
   }
